--- a/MINELUX/css/home.css
+++ b/MINELUX/css/home.css
@@ -46,9 +46,7 @@ p
 }
 .container
 {
-    position: relative;
-    width: 1200px;
-    max-height: none !important;
+    /* max-height: none !important; */
     padding-right: 15px;
     padding-left: 15px;
     padding-right: auto;
@@ -1005,15 +1003,23 @@ footer {
 
 /*GELERIE PHOTOS*/
 
+/* .escort .gallery-links .gallery .flex-container{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-content: flex-start;
+} */
+
 .gallery a:hover {
     opacity: 0.5;
     
 }
 
-.gallery a div {
+/* .gallery a div {
     width: 80%;
     float: right;
-    display: inline;
+    display: inline-flex;
     padding: 0 7px;
     background-position: center;
     background-repeat: no-repeat;
@@ -1021,13 +1027,11 @@ footer {
     position: relative;
     width: 302px;
     height: 443px;
-}
-.gallery-container {
-
-} 
-
-  .flex-container{
+} */
+.flex-container{
     display: flex;
-    flex-direction: row;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+    align-content: flex-start;
 }
-
