--- a/MINELUX/css/ville-de-travail.css
+++ b/MINELUX/css/ville-de-travail.css
@@ -625,6 +625,16 @@ input[type="checkbox"], input[type="radio"] {
     box-sizing: border-box;
     padding: 0;
 }
+.radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
+    position: absolute;
+    margin-top: 4px \9;
+    margin-left: -20px;
+}
+input[type="radio"], input[type="checkbox"] {
+    margin: 4px 0 0;
+    margin-top: 1px \9;
+    line-height: normal;
+}
 input, button, select, textarea {
     font-family: inherit;
     font-size: inherit;
